asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__discard__discard_branch_confirm_prompt.snap
---
source: src/gitui/tests/discard.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌  asd                                                                          |
 * main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Really discard? (y or n) ›                                                    |
styles_hash: e802436b24fbcb24
