asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__discard__discard_branch_no.snap
---
source: src/gitui/tests/discard.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌  asd                                                                          |
 * main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 8aeb733dddf67818
