asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__discard__discard_file_move.snap
---
source: src/gitui/tests/discard.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit.                             |
                                                                                |
 Recent commits                                                                 |
▌46c81ca main add new-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git mv --force moved-file new-file                                            |
styles_hash: 696d0b50bd2c76de
