asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__discard__discard_unstaged_hunk.snap
---
source: src/gitui/tests/discard.rs
expression: ctx.redact_buffer()
---
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 355101d0bd329837
